<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_login_background"
    android:fillViewport="true"
    tools:context=".SignupFrag">
    <!-- TODO: SignUp fragment layout -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="16dp">

        <LinearLayout
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@color/cardview_light_background"
            android:elevation="4dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/title_image"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_cm" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fontFamily="@font/poppins_bold"
                android:gravity="center"
                android:text="@string/signup_title"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/title"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/cardview_light_background"
            android:elevation="4dp"
            android:orientation="vertical"
            android:padding="4dp">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/Q1"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/district"
                android:minHeight="?attr/actionBarSize"
                android:paddingStart="16dp"
                android:paddingEnd="16dp" />

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/Q2"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/block"
                android:minHeight="?attr/actionBarSize"
                android:paddingStart="16dp"
                android:paddingEnd="16dp" />

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Q3"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#FFF"
                    android:focusable="true"
                    android:hint="@string/sign_Q3"
                    android:inputType="textAutoComplete"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Q4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#FFF"
                    android:focusable="true"
                    android:hint="@string/sign_Q4"
                    android:inputType="textAutoComplete"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Q5"
                    style="@style/Widget.AppCompat.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#FFF"
                    android:focusable="true"
                    android:hint="@string/sign_Q5"
                    android:inputType="textAutoComplete"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Q6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#FFF"
                    android:focusable="true"
                    android:hint="@string/sign_Q6"
                    android:inputType="textAutoComplete"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile_number"
                app:hintAnimationEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/Q7"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#FFF"
                    android:focusable="true"
                    android:inputType="number"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="?attr/actionBarSize"
                android:layout_marginEnd="?attr/actionBarSize">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/OTP"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="#FFF"
                    android:hint="@string/otp"
                    android:maxLength="6"
                    android:textAlignment="center"
                    android:visibility="gone" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btnSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:focusable="true"
                android:fontFamily="@font/poppins_bold"
                android:text="SUBMIT"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#FFF"
                app:backgroundTint="@color/colorInfo"
                android:drawableStart="@drawable/ic_save" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>